--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="/"
                     class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                     <img src="./img/icon.svg" alt="">
-                    <span class="fs-4 fw-bold">Qadimiy</span>
+                    <span class="fs-4 fw-bold">Q.A.D.I.M.I.Y</span>
                 </a>
 
                 <ul class="nav nav-pills">
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
                     <li class="nav-item"><a href="#awaits" class="nav-link">Что дальше?</a></li>
-                    <li class="nav-item"><a href="./pages/courses.html" class="nav-link">Курсы</a></li>
+                    <li class="nav-item"><a href="./pages/notfound.html" class="nav-link">Курсы</a></li>
                     <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
                 </ul>
             </header>
@@ -38,11 +38,11 @@
                         height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Идея</h1>
-                    <p class="lead">Вся философия QADIMIY - это идея, которая как дитя имеет своё предназначение !</p>
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Fortunate Seeker</h1>
+                    <p class="lead">Юкка притягивает удачу и создает хорошую атмосферу !</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <a href="https://t.me/qad1miy"><button type="button"
-                                class="btn btn-primary btn-lg px-4 me-md-2">Подписаться</button></a>
+                                class="btn btn-success btn-lg px-4 me-md-2">Подписаться</button></a>
                     </div>
                 </div>
             </div>
@@ -56,29 +56,33 @@
             <div class="col d-flex align-items-start flex-wrap">
                 <img src="./img/icon.svg" alt="">
                 <div>
-                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Плейбой</h3>
-                    <!-- <p>Paragraph of text beneath the heading to explain the heading.</p> -->
+                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Программист</h3>
+                    <p>В настоящее время я являюсь
+                        веб-дизайнером.Разбираюсь в:
+                        Front-End.Кроме этого я разрабатываю игры на движке
+                        Construct 3.Но пока я в лицее.</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start flex-wrap">
-                <img src="./img/⛳.svg" alt="">
+                <img src="./img/icon2.svg" alt="">
                 <div>
-                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Гений</h3>
-                    <!-- <p>Paragraph of text beneath the heading to explain the heading.</p> -->
+                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Автор канала</h3>
+                    <p>Являюсь автор креативного канала 
+                        Q.A.D.I.M.I.Y. Идея пришла мне во время 1ого курса в лицее , чтобы впечатлить все свои амбициозные идеи.</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start flex-wrap">
-                <img src="./img/🎈.svg" alt="">
+                <img src="./img/icon3.svg" alt="">
                 <div>
-                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Миллиардер</h3>
-                    <!-- <p>Paragraph of text beneath the heading to explain the heading.</p> -->
+                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Интроверт</h3>
+                    <p>Я реально стал интровертом в последнее время.Всё больше становлюсь своей лучшей версией себя, окружая себя только лучшими.</p>
                 </div>
             </div>
             <div class="col d-flex align-items-start flex-wrap">
-                <img src="./img/🎶.svg" alt="">
+                <img src="./img/icon4.svg" alt="">
                 <div>
-                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Филантроп</h3>
-                    <!-- <p>Paragraph of text beneath the heading to explain the heading.</p> -->
+                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Хочу стать кем-то</h3>
+                    <p>У меня есть цель. Вообще я хотел стать изобретателем , как Томас Эдисон.Меня очень мотивирует Стив Джобс и его минимализм.</p>
                 </div>
             </div>
         </div>
@@ -87,57 +91,25 @@
     <div class="container" id="projects">
         <h2 class="pb-2 border-bottom">Проекты</h2>
 
-        <a href="https://t.me/qad1miy/37">
-            <div class="col-sm-6 col-lg-4 mb-4 g-4 py-5">
-                <div class="card">
-                    <img src="./img/project.jpg" alt="">
+            <div class="card mt-4 mb-4" >
+                <a href="https://t.me/qad1miy/37" style="color:black;">
+                    <img src="./img/project.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">50 IDEAS OF THE WORLD✨</h5>
-                        <p class="card-text">Это мой первый проект на канале QADIMIY</p>
+                      <h5 class="card-title">50 IDEAS OF THE WORLD✨</h5>
+                      <p class="card-text">Это мой первый проект на канале QADIMIY</p>
                     </div>
-                </div>
+                </a>
             </div>
-        </a>
-    </div>
-
-    <div class="container" id="awaits">
-        <h2 class="pb-2 border-bottom">Что дальше?</h2>
-
-        <a href="https://t.me/qad1miy/318">
-            <div class="flex">
-                <div class="col-sm-6 col-lg-4 mb-4 g-4 py-5">
-                    <div class="card">
-                        <img src="./img/project2.jpg" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">FullStack - Qadimiy 🌳</h5>
-                            <p class="card-text">Это мой долгожданный проект на канале QADIMIY</p>
-                        </div>
-                    </div>
-                </div>
-        </a>
-
-        <a href="https://t.me/qad1miy/303">
-            <div class="col-sm-6 col-lg-4 mb-4">
-                <div class="card">
-                    <img src="./img/project3.jpg" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Cheatr 🧧</h5>
-                        <p class="card-text">Это мой будущий успешный 😘 проект на канале QADIMIY</p>
-                    </div>
-                </div>
-            </div>
-        </a>
-
-    </div>
     </div>
 
     <div class="container" id="blog">
         <h2 class="pb-2 border-bottom">Блог</h2>
 
-        В будущем...✔
-
-        <div class="d-grid gap-2 mt-3 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Подписаться</button>
+        <div class="d-flex gap-2 justify-content-center py-5">
+            <button class="btn btn-primary rounded-pill px-3" type="button"><a href="https://t.me/qad1miy" class="forLink">Telegram</a></button>
+            <button class="btn btn-secondary rounded-pill px-3" type="button"><a href="https://www.youtube.com/@qad1miy" class="forLink">Youtube</a></button>
+            <button class="btn btn-danger rounded-pill px-3" type="button"><a href="https://pin.it/1C5y0Ul" class="forLink">Pinterest</a></button>
+            <button class="btn btn-warning rounded-pill px-3" type="button"><a href="https://instagram.com/qadim1y?igshid=OGQ5ZDc2ODk2ZA==" class="forLink">Instagram</a></button>
         </div>
     </div>
 
@@ -146,19 +118,10 @@
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <p class="col-md-4 mb-0 text-body-secondary">© 2023 Qadimiy</p>
 
-            <a href="/"
-                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <a href="./index.html"
+                class="d-flex align-items-center justify-content-center mb-3 text-decoration-none">
                 <img src="./img/icon.svg" alt="">
             </a>
-
-            <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="#idea" class="nav-link active" aria-current="page">Идея</a></li>
-                <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
-                <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
-                <li class="nav-item"><a href="#awaits" class="nav-link">Что дальше?</a></li>
-                <li class="nav-item"><a href="./pages/courses.html" class="nav-link">Курсы</a></li>
-                <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
-            </ul>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
