--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
                     <li class="nav-item"><a href="#awaits" class="nav-link">Что дальше?</a></li>
-                    <li class="nav-item"><a href="./pages/notfound.html" class="nav-link">Курсы</a></li>
+                    <li class="nav-item"><a href="./notfound.html" class="nav-link">Курсы</a></li>
                     <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
                 </ul>
             </header>
