--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container" id="blog">
         <h2 class="pb-2 border-bottom">Блог</h2>
 
-        <div class="d-flex gap-2 justify-content-center py-5">
+        <div class="d-flex flex-wrap gap-2 justify-content-center py-5">
             <button class="btn btn-primary rounded-pill px-3" type="button"><a href="https://t.me/qad1miy" class="forLink">Telegram</a></button>
             <button class="btn btn-secondary rounded-pill px-3" type="button"><a href="https://www.youtube.com/@qad1miy" class="forLink">Youtube</a></button>
             <button class="btn btn-danger rounded-pill px-3" type="button"><a href="https://pin.it/1C5y0Ul" class="forLink">Pinterest</a></button>
