--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
                     <span class="fs-4 fw-bold">Q.A.D.I.M.I.Y</span>
                 </a>
 
-                <ul class="nav nav-pills" style="text-align:center;">
+                <ul class="nav nav-pills" style="justify-content:center;">
                     <li class="nav-item"><a href="#idea" class="nav-link active" aria-current="page">Идея</a></li>
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
-                    <li class="nav-item"><a href="./notfound.html" class="nav-link">Курсы</a></li>
                     <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
                 </ul>
             </header>
