--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <span class="fs-4 fw-bold">Q.A.D.I.M.I.Y</span>
                 </a>
 
-                <ul class="nav nav-pills" style="justify-content:center;">
-                    <li class="nav-item"><a href="#idea" class="nav-link active" aria-current="page">Идея</a></li>
+                <ul class="nav nav-pills" style="">
+                    <li class="nav-item"><a href="#idea" class="nav-link" aria-current="page">Идея</a></li>
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
                     <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
