--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="fs-4 fw-bold">Q.A.D.I.M.I.Y</span>
                 </a>
 
-                <ul class="nav nav-pills" style="">
+                <ul class="nav nav-pills">
                     <li class="nav-item"><a href="#idea" class="nav-link" aria-current="page">Идея</a></li>
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
