--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </a>
 
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#idea" class="nav-link" aria-current="page">Идея</a></li>
+                    <li class="nav-item"><a href="#idea" class="nav-link active">Идея</a></li>
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
                     <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
