--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </header>
         </div>
 
-        <div id="idea" class="container col-xxl-8 px-4 py-5">
+        <div id="idea" class="container px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="./img/hero.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
