--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     <li class="nav-item"><a href="#whoami" class="nav-link">Кто я?</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Проекты</a></li>
                     <li class="nav-item"><a href="#blog" class="nav-link">Блог</a></li>
+                    <li class="nav-item"><a href="https://qadimiy.github.io/avicii.github.io/" class="nav-link">Avicii</a></li>
+                    
                 </ul>
             </header>
         </div>
